src/main/java/lexical/test/failing/00.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 7 | Identificador de clase mal formado: Class3 |
Class3

